# weaving-space

./: .gitignore  GWR-example-2.ipynb  GWR-example-3.ipynb  GWR-example-h3.ipynb  LICENSE.md  README.md  abstract.txt  all-the-tiles.ipynb  anthromes-nacis-100km-margin-6km-ragged-prioritise--speedup-test-post-2022-09-16-optimizations.ipynb  anthromes-nacis-100km-margin-7km-ragged-prioritise.ipynb  anthromes-nacis-davids-version.ipynb  anthromes-nacis-exploded.ipynb  anthromes-nacis-hex-dissection--100km--margin-10km-across--ragged--prioritise-tiles.ipynb  anthromes-nacis-hex-dissection--100km--margin-12km-across--ragged--prioritise-tiles-POSTER-V1-LEGEND.ipynb  anthromes-nacis-hex-dissection--100km--margin-15km-across--ragged--prioritise-tiles.ipynb  anthromes-nacis-hex-dissection--60km--margin-10km-across--ragged--prioritise-tiles.ipynb  anthromes-nacis-hex-dissection--80km--margin-15km-across--ragged--prioritise-tiles.ipynb  anthromes-nacis-make-world-boundary-file.ipynb  anthromes-nacis-triweave--40km-strands--0.0inset--ragged--prioritise-tiles.ipynb  anthromes-nacis.ipynb  anthromes.R  auckland-imd.R  biaxial-weave-units.R  biaxial-weave-units.ipynb  biaxial_weave_units.py  cairo.gpkg  combine-orderings.html  complex-weaves.Rmd  debug-triaxial-weave-units.ipynb  double-name.ipynb  environment.yml  example-election-map.ipynb  example-map-2.html  example-tiles-33434.ipynb  example-tiles-annuli.html  example-tiles-annuli.ipynb  example-tiles-arrows.ipynb  example-tiles-cairo.ipynb  example-tiles-h3.ipynb  example-tiles-octagons.ipynb  (+58 more)
NACIS-2022/: anthromes-mod.qml  anthromes-nacis-100km--margin-15km-across--ragged--prioritise-tiles.ipynb  anthromes-nacis-100km-margin-5km-ragged-prioritise.ipynb  anthromes-nacis-hex-dissection--100km--margin-12km-across--ragged--prioritise-tiles-POSTER-V2.ipynb  anthromes-nacis-hex-dissection--80km--margin-10km-across--ragged--prioritise-tiles.ipynb  anthromes-nacis.ipynb  anthromes-tiled-400-20.gpkg  anthromes-tiled-500-20.gpkg  anthromes-tiled-cube-weave-spacing-35k-aspect-85-inset900-s_shapes.gpkg  anthromes-tiled-cube-weave-spacing-35k-aspect-85-inset900.gpkg  anthromes-tiled-hex-diss-3-v1.gpkg  anthromes-tiled-hex-diss-3-v2.gpkg  anthromes.qml  (+10 more)
(+945 files in other folders)
